--- a/ui/dev-umd/index.umd.html
+++ b/ui/dev-umd/index.umd.html
@@ -13,115 +13,19 @@
   </head>
   <body>
     <div id="q-app">
-      <q-layout view="lHh Lpr fff">
-        <q-header class="glossy bg-primary">
-          <q-toolbar>
-            <q-btn flat round dense @click="drawerState = !drawerState" icon="menu"></q-btn>
-
-            <q-toolbar-title>
-              Quasar App
-            </q-toolbar-title>
-
-            <q-btn
-              class="q-mx-md"
-              type="a"
-              href="./index-multiapp.umd.html"
-              outline
-              color="white"
-              icon="launch"
-              label="To Multi-App"
-              no-caps
-            ></q-btn>
-
-            <div>Quasar v{{ $q.version }} | Vue v{{ vueVersion }}</div>
-          </q-toolbar>
-        </q-header>
-
-        <q-drawer
-          v-model="drawerState"
-          bordered
-          show-if-above
-          class="bg-grey-2"
-        >
-          <q-list>
-            <q-item-label header>Essential Links</q-item-label>
-            <q-item clickable @click="launchUrl">
-              <q-item-section avatar>
-                <q-icon name="school"></q-icon>
-              </q-item-section>
-              <q-item-section>
-                <q-item-label>Docs (openURL)</q-item-label>
-                <q-item-label caption>quasar.dev</q-item-label>
-              </q-item-section>
-            </q-item>
-            <q-item clickable tag="a" target="_blank" href="https://github.com/quasarframework/">
-              <q-item-section avatar>
-                <q-icon name="code"></q-icon>
-              </q-item-section>
-              <q-item-section>
-                <q-item-label>GitHub</q-item-label>
-                <q-item-label caption>github.com/quasarframework</q-item-label>
-              </q-item-section>
-            </q-item>
-            <q-item clickable tag="a" target="_blank" href="https://chat.quasar.dev">
-              <q-item-section avatar>
-                <q-icon name="chat"></q-icon>
-              </q-item-section>
-              <q-item-section>
-                <q-item-label>Discord Chat Channel</q-item-label>
-                <q-item-label caption>chat.quasar.dev</q-item-label>
-              </q-item-section>
-            </q-item>
-            <q-item clickable tag="a" target="_blank" href="https://forum.quasar.dev">
-              <q-item-section avatar>
-                <q-icon name="forum"></q-icon>
-              </q-item-section>
-              <q-item-section>
-                <q-item-label>Forum</q-item-label>
-                <q-item-label caption>forum.quasar.dev</q-item-label>
-              </q-item-section>
-            </q-item>
-            <q-item clickable tag="a" target="_blank" href="https://twitter.com/quasarframework">
-              <q-item-section avatar>
-                <q-icon name="rss_feed"></q-icon>
-              </q-item-section>
-              <q-item-section>
-                <q-item-label>Twitter</q-item-label>
-                <q-item-label caption>@quasarframework</q-item-label>
-              </q-item-section>
-            </q-item>
-          </q-list>
-        </q-drawer>
-
-        <q-page-container>
-          <q-page padding class="flex flex-center">
-
-            <!-- page content; replace this entirely -->
-            <q-card flat bordered>
-              <q-card-section>
-                <div class="q-mb-md row items-center">
-                  <span class="text-subtitle1">"yarn dev:umd"</span>
-                  <q-rating class="q-ml-md" v-model="stars" size="24px"></q-rating>
-                </div>
-                <div class="text-caption">You need to build & refresh page on each change on Quasar</div>
-                <div class="text-caption">Do not include index.umd.html in your commits</div>
-              </q-card-section>
-
-              <q-separator></q-separator>
-
-              <q-card-section class="row items-center no-wrap q-py-xs">
-                <div class="text-caption text-grey">$q.lang.label.update: {{ $q.lang.label.update }}</div>
-                <q-space></q-space>
-                <q-btn flat color="primary" label="Refresh" @click="onRefreshClick"></q-btn>
-              </q-card-section>
-            </q-card>
-
-          </q-page>
-        </q-page-container>
-      </q-layout>
+      <q-card flat bordered class="q-pa-xl">
+        <q-select
+          v-model="heavyModel"
+          label="Heavy - Dynamic loading"
+          multiple
+          use-chips
+          :options="heavyListDynamic"
+          @virtual-scroll="onScroll"
+        ></q-select>
+      </q-card>
     </div>
 
-    <script src="https://unpkg.com/vue@^3.0.0/dist/vue.global.prod.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue@3/dist/vue.global.js"></script>
     <script src="dist/quasar.umd.js"></script>
     <script src="dist/lang/es.umd.prod.js"></script>
     <script src="dist/lang/en-GB.umd.prod.js"></script>
@@ -129,22 +33,50 @@
     <script src="dist/icon-set/svg-fontawesome-v6.umd.prod.js"></script>
 
     <script>
+      const
+  stringOptions = [
+    'Google', 'Facebook', 'Twitter', 'Apple', 'Oracle'
+  ],
+  heavyList = []
+
+for (let i = 0; i <= 100000; i++) {
+  heavyList.push(Object.freeze({
+    label: 'Opt ' + i,
+    value: Math.random()
+  }))
+}
+
+Object.freeze(heavyList)
+
+const pageSize = 50
+const nextPage = 2
+const lastPage = Math.ceil(heavyList.length / pageSize)
+
       const app = Vue.createApp({
-        setup () {
+        data () {
           return {
-            version: Quasar.version,
-            vueVersion: Vue.version,
-            stars: Vue.ref(5),
-            drawerState: Vue.ref(false),
-
-            launchUrl (url) {
-              Quasar.openURL('https://quasar.dev')
-            },
-
-            onRefreshClick () {
-              window.location.reload()
-            }
+            heavyModel: null,
+            heavyList: [],
+            nextPage
           }
+        },
+        computed: {
+          heavyListDynamic () {
+            return Object.freeze(heavyList.slice(0, pageSize * (this.nextPage - 1)))
+          }
+        },
+
+        methods: {
+          onScroll (evt) {
+      const lastIndex = this.heavyListDynamic.length - 1
+
+      if (this.nextPage < lastPage && evt.to === lastIndex) {
+        this.nextPage++
+        this.$nextTick(() => {
+          evt.ref.refresh()
+        })
+      }
+    }
         }
       })
 
