chore: migrate to pnpm

--- a/ui/dev-umd/index-multiapp.umd.html
+++ b/ui/dev-umd/index-multiapp.umd.html
@@ -40,7 +40,7 @@
         <q-card flat bordered>
           <q-card-section>
             <div class="q-mb-md row items-center">
-              <span class="text-subtitle1">"yarn dev:umd"</span>
+              <span class="text-subtitle1">"pnpm dev:umd"</span>
               <q-rating class="q-ml-md" v-model="stars" size="24px"></q-rating>
             </div>
             <div class="text-caption">You need to build & refresh page on each change on Quasar</div>
