feat(ui): finalize the new form for IconSet and Lang

--- a/ui/playground-umd/index-multiapp.umd.html
+++ b/ui/playground-umd/index-multiapp.umd.html
@@ -78,7 +78,7 @@
       })
 
       app1.use(Quasar, {
-        lang: Quasar.lang.es,
+        lang: Quasar.Lang.es,
         config: {
           // globalNodes: {
           //   class: 'gigi'
@@ -101,21 +101,21 @@
       })
 
       app2.use(Quasar, {
-        lang: Quasar.lang.de
+        lang: Quasar.Lang.de
       })
 
       Quasar.Notify.create('Startup notification')
 
-      Quasar.lang.set(Quasar.lang.es)
-      Quasar.iconSet.set(Quasar.iconSet.svgFontawesomeV6)
+      Quasar.Lang.set(Quasar.Lang.es)
+      Quasar.IconSet.set(Quasar.IconSet.svgFontawesomeV6)
 
       app1.mount('#q-app1')
       app2.mount('#q-app2')
 
-      console.log('fontawesome-v6 set', Quasar.iconSet.fontawesomeV6)
-      console.log('svg-fontawesome-v6 set', Quasar.iconSet.svgFontawesomeV6)
-      console.log('es lang', Quasar.lang.es)
-      console.log('en-GB lang', Quasar.lang.enGB)
+      console.log('fontawesome-v6 set', Quasar.IconSet.fontawesomeV6)
+      console.log('svg-fontawesome-v6 set', Quasar.IconSet.svgFontawesomeV6)
+      console.log('es lang', Quasar.Lang.es)
+      console.log('en-GB lang', Quasar.Lang.enGB)
     </script>
   </body>
 </html>
