--- a/ui/playground-umd/index.umd.html
+++ b/ui/playground-umd/index.umd.html
@@ -152,15 +152,15 @@
 
       Quasar.Notify.create('Startup notification')
 
-      Quasar.lang.set(Quasar.lang.es)
-      Quasar.iconSet.set(Quasar.iconSet.svgFontawesomeV6)
+      Quasar.Lang.set(Quasar.Lang.es)
+      Quasar.IconSet.set(Quasar.IconSet.svgFontawesomeV6)
 
       app.mount('#q-app')
 
-      console.log('fontawesome-v6 set', Quasar.iconSet.fontawesomeV6)
-      console.log('svg-fontawesome-v6 set', Quasar.iconSet.svgFontawesomeV6)
-      console.log('es lang', Quasar.lang.es)
-      console.log('en-GB lang', Quasar.lang.enGB)
+      console.log('fontawesome-v6 set', Quasar.IconSet.fontawesomeV6)
+      console.log('svg-fontawesome-v6 set', Quasar.IconSet.svgFontawesomeV6)
+      console.log('es lang', Quasar.Lang.es)
+      console.log('en-GB lang', Quasar.Lang.enGB)
     </script>
   </body>
 </html>
